# distributed-prefix-free-parsing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Parser.hpp  README.md  StringHash.hpp  main.cpp  rabin-karp.hpp
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt  bwt.hpp  pfp.hpp
src/bwt/: CMakeLists.txt  bwt.hpp
src/checks/: CMakeLists.txt  check_bwt.hpp  check_parsing.hpp  check_sa.hpp
src/executables/: pfp_runner.cpp
src/hash/: CMakeLists.txt  rabin-karp.hpp
src/mpi/: CMakeLists.txt  data_distribution.hpp  mpi_utils.hpp  request_response.hpp
src/util/: CLI_mpi.hpp  CMakeLists.txt  cli_parser.hpp  dcx_caller.hpp  logger.hpp  pair.hpp
util/: CLI_mpi.hpp
